# inq_service_svc

./: API.md  Makefile  README.md  pyproject.toml
instructions/: inquiry_classifier.txt
migrations/: env.py
migrations/versions/: 1a3b4cf636ba_add_customer_name_to_inquiries.py  a42cca4a3019_add_user_inquiry_message_models.py
src/inq_service_svc/: app.py  config.py  main.py
src/inq_service_svc/models/: __init__.py  base.py  enums.py  inquiry.py  user.py
src/inq_service_svc/routers/: __init__.py  auth.py  inquiries.py  users.py  websocket.py
src/inq_service_svc/schemas/: __init__.py  auth.py  inquiry.py  user.py
src/inq_service_svc/services/: classifier.py  email_processor.py  inquiry_service.py
src/inq_service_svc/utils/: __init__.py  email_client.py  openai_client.py  scheduler.py  security.py  websocket_manager.py
tests/: conftest.py  test_app_scheduler.py  test_models.py
tests/routers/: test_auth.py  test_inquiries.py  test_users.py
tests/services/: test_classifier.py  test_email_processor.py  test_inquiry_service.py
tests/utils/: test_email_client.py  test_openai_client.py  test_scheduler.py  test_security.py  test_websocket.py
