[tool.poetry]
name = "inq_service_svc"
version = "1.0.0"
description = ""
authors = ["ThesenAI"]
readme = "README.md"
packages = [{include = "inq_service_svc", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
pydantic = "^2.10.2"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
psycopg2-binary = "^2.9.11"
openai = "^2.15.0"
imap-tools = "^1.11.0"
apscheduler = "^3.11.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
email-validator = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.28.1"
anyio = "^4.12.1"

[tool.poetry.scripts]
inq_service_svc = "inq_service_svc.main:main"

[tool.pytest.ini_options]
pythonpath = [ "src/" ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"